src/components/Carrousel/Carrousel.css
.carrousel--container {
    position: relative;
    margin-bottom: 15px;
    height: 255px;
    z-index: 99;
    display: flex;
}

.carrousel--image {
    border-radius: 10px;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.carrousel--arrow {
    position: absolute;
    top: 0;
    bottom: 0;
    margin: auto 0;
    height: 20px;
    cursor: pointer;
}

.previous {
    left: 6px
}

.next {
    right: 6px
}

.carrousel--caption {
    font-size: 1rem;
    color: white;
    position: absolute;
    left: 50%;
    bottom: 10px;
}

.carrousel--slide {
    opacity: 0;
}

.carrousel--active {
    width: 100%;
    opacity: 1;
    transition: linear 0.3s ;
}

.carrousel--slide::before {
    content: '';
    width: 100%;
    height: 100%;
    display: block;
    position: absolute;
    background: radial-gradient(circle, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
    border-radius: 10px;

}


@media screen and (min-width: 768px) {
    .carrousel--container {
        height: 415px;
    }

    .carrousel--arrow {
        height: 80px;
    }
    
    .previous {
        left: 25px
    }
    
    .next {
        right: 25px
    }

    .carrousel--caption {
        font-size: 1.125rem;
        bottom: 25px;
    }
}

